--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,7 +1,7 @@
 # These are supported funding model platforms
 
 github: [tmvdl]
-patreon: tarsisdev
-open_collective: tarsisdev
-ko_fi: tarsisdev
-liberapay: tarsisdev
+# patreon: 
+# open_collective: 
+# ko_fi: 
+# liberapay: 
